# TeamDynamix

./: .env.example  CONTRIBUTING.md  LICENSE  README.md  commercial_license.txt  create_ticket.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: version-and-publish.yml
scripts/: synthetic_descriptions.py  ticket_generator.py
src/teamdynamix/: __init__.py  http_client.py
src/teamdynamix/tdnext/: __init__.py
src/teamdynamix/tdnext/tickets/: tickets.py
src/teamdynamix/utils/: rate_limiter.py
teamdynamix/: __init__.py  http_client.py
teamdynamix/tdnext/: core.py
teamdynamix/tdnext/tickets/: __init__.py
tests/: conftest.py  test_auth.py  test_basic.py  test_create_ticket.py
