[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "teamdynamix"
dynamic = ["version"]
description = "Unofficial Python SDK for TeamDynamix API integration"
readme = "README.md"
authors = [{name = "Ron Vallejo", email = "ronvallejo@gmail.com"}]
license = {text = "PolyForm Noncommercial License"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8"
dependencies = [
    "requests>=2.25.0",
    "python-dotenv>=0.19.0",
    "openai>=1.0.0",
    "pyjwt>=2.8.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.7.0",
    "isort>=5.12.0",
    "mypy>=1.5.0",
    "pylint>=2.17.5",
    "pytest-mock>=3.11.1",
    "responses>=0.23.1"
]
optional = [
    "requests-cache>=1.1.0",
    "tenacity>=8.2.3"
]

[tool.semantic_release]
version_variable = [
    "src/teamdynamix/__init__.py:__version__",
    "pyproject.toml:version"
]
branch = "main"
upload_to_pypi = true
build_command = "python -m build"

[tool.setuptools.dynamic]
version = {attr = "teamdynamix.__version__"}